# hod

./: .gitignore  ChangeLog  ChangeLog.md  LICENSE  Makefile  Makefile.in  Makefile.win  README  README.md  changelog.debian  configure  configure.in  env.sh  hod.c  mk_debian_package.rb  mk_doc.rb  mk_winzip.sh  release_notes.md
doc/: hod.1  hod.pod
docs/: README.md  glossary.txt  hod.1  hod.pod
icon_example/: Makefile  README.md  go.mod  main.go
icon_example/assets/: icon.go
