dnl ---
dnl muquit@muquit.com May-14-2012 
dnl ---------------------------------------
AC_INIT(hod.c)

AC_CANONICAL_HOST
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_PROG_LN_S
AC_SUBST(STD_CINCLUDES)
AC_SUBST(STD_CDEFINES)
AC_SUBST(STD_CWARNINGS)
AC_CHECK_HEADERS(time.h)
AC_CHECK_HEADERS(ctype.h)
AC_SUBST(CCOPT)
AC_C_CONST
AC_C_INLINE
AC_C_VOLATILE
AC_TYPE_SIZE_T
AC_SUBST(MKDEPCC)
AC_SUBST(MKDEPCFLAGS)
AC_HEADER_STDC

AC_CONFIG_FILES([
    Makefile
])

AC_OUTPUT
